# gurukul

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
.moon/: tasks.yml  workspace.yml
app-core/src/: lib.rs
apps/cli/: Cargo.toml  moon.yml
apps/cli/src/: main.rs
apps/coach-cli/: Cargo.toml  moon.yml
apps/coach-cli/src/: main.rs  tui.rs
apps/coach-game/: .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD.md  CONTRIBUTING.md  Cargo.toml  PLATFORM-DEBUGGING.md
apps/coach-game/ios/: Info.plist  package.sh
apps/coach-game/scripts/: shot.sh
apps/coach-game/src/: coach.rs  feature_history.rs  feature_types.rs  font.rs  game.rs  lib.rs  main.rs  replay_audio.rs  semantic_graph.rs  state.rs  ui.rs
apps/coach-game/src/game/: dial.rs  hud.rs  mod.rs  note_dial.rs  scale_picker.rs  time_graph.rs
apps/coach-game/src/menu/: main_menu.rs  mod.rs  paused.rs  permission.rs  settings.rs
apps/coach-game/src/menu/settings/: audio.rs  mod.rs  music.rs
apps/coach-game/src/trace/: mod.rs  paths.rs  record.rs  recording_coach.rs  systems.rs  wallclock.rs  writer.rs
apps/coach-game/src/trace/replay/: coach.rs  driver.rs  load.rs  mod.rs
apps/coach-game/src/widgets/: mod.rs  note_dial.rs  time_graph.rs
apps/coach-game/src/widgets/hud/: mod.rs  model.rs  scene.rs  systems.rs
apps/coach-game/src/widgets/note_dial/: mod.rs  model.rs  scene.rs  systems.rs
apps/coach-game/src/widgets/scale_picker/: mod.rs  model.rs  scene.rs  systems.rs
apps/coach-game/src/widgets/time_graph/: mod.rs  model.rs  scene.rs  systems.rs  trace.wgsl
apps/coach-game/tests/: dial_tracks_features.rs  graph_tracks_features.rs  non_overlap_layout.rs  replay_audio_autoexit.rs  state_transitions.rs  time_graph_layout.rs  time_graph_tracks_features.rs  trace_recorder.rs  trace_recorder_layout.rs  trace_replay_click.rs  trace_replay_roundtrip.rs  widget_spawn.rs  widget_trees.rs
apps/coach-game/tests/common/: mod.rs
apps/mac/: .gitignore
cli/: Cargo.toml  moon.yml
cli/src/: main.rs
data/: .gitignore
data/hindustani-ragas/: abhogi.json  ahir-bhairav.json  alhaiya-bilawal.json  asa.json  bahar.json  bairagi-todi.json  bairagi.json  barwa.json  basant-bahar.json  basant-mukhari.json  basant.json  bhairavi.json  bhairo.json  bhatiyar.json  bhimpalasi.json  bhupali.json  bihag.json  bihagara.json  bilaskhani-todi.json  bilawal.json  chandrakauns.json  charukeshi.json  chayanat.json  darbari.json  deskar.json  dev-gandhar.json  devgiri-bilawal.json  dhani.json  durga.json  gaud-malhar.json  gaud-sarang.json  gauri.json  gorakh-kalyan.json  gunkali.json  hameer.json  harikauns.json  hemant.json  hindol.json  jaunpuri.json  jog.json  (+25 more)
docs/: ARCHITECTURE.md  AUDIO_TRACE_PHASE1_SPEC.md  AUDIO_TRACE_PHASE2_SPEC.md  AUDIO_TRACE_PHASE3_SPEC.md  AUDIO_TRACE_PLAN.md  BAND_SERIES_PLAN.md  BAND_STEP_B_PLAN.md  COACH_GAME_LAYERING_PLAN.md  COACH_GAME_PLACEMENT_PLAN.md  COACH_GAME_TRACE_GZIP_PLAN.md  COACH_GAME_TRACE_PATHS_PLAN.md  COACH_GAME_UX_TRACE_PLAN.md  MUSIC_MODEL.md  PDC_PLAN.md  PHASE_1_4.md  PHASE_1_4_8.md  PHASE_1_6_1B_PLAN.md  PHASE_1_6_1_SPEC.md  PHASE_1_6_2A_PLAN.md  PHASE_1_6_2C_PLAN.md  PHASE_1_6_PLAN.md  PHASE_RECORDER_FINALIZE_PLAN.md  PHASE_TELEMETRY_FILE_PLAN.md  PHASE_TRACE_ON_SIM_PLAN.md  RESEARCH.md  ROADMAP.md  SPEC-AppCoach.md  TESTING.md  VIBRATO_NODE_PERFECT_PLAN.md  VIBRATO_TRACE_SPEC.md  VISION.md
docs/plans/: PR_1_4_6.md  PR_1_4_6_1.md  PR_1_4_7.md
domain-adapters/: AGENTS.md
domain-adapters/app-coach/: Cargo.toml
domain-adapters/app-coach/src/: audio_recorder.rs  control_plane.rs  data_plane.rs  helpers.rs  inspect.rs  lib.rs  outbound.rs  pitch_world.rs  shutdown.rs
domain-adapters/audio-apple/: Cargo.toml
domain-adapters/audio-apple/src/: capture.rs  devices.rs  driver.rs  lib.rs
domain-adapters/audio-apple/tests/: conformance.rs
domain-adapters/audio-cpal/: Cargo.toml  moon.yml
domain-adapters/audio-cpal/src/: capture.rs  devices.rs  driver.rs  lib.rs  session.rs
domain-adapters/audio-cpal/tests/: conformance.rs
domain-adapters/audio-wav/: Cargo.toml
domain-adapters/clock/: Cargo.toml
domain-adapters/clock-std/: Cargo.toml
domain-adapters/telemetry/: Cargo.toml
domain-adapters/telemetry-std/: Cargo.toml
domain-adapters/telemetry-tui/: Cargo.toml
domain-adapters/telemetry/src/: lib.rs
domain-adapters/telemetry/tests/: stderr_smoke.rs
domain-ports/: AGENTS.md  Cargo.toml
domain-ports/src/: app_coach.rs  audio_capture.rs  audio_devices.rs  audio_driver.rs  audio_session.rs  clock.rs  engine_inspect.rs  lib.rs  music.rs  pitch.rs  scale.rs  telemetry.rs  tuning.rs
dsp/: AGENTS.md  ARCHITECTURE.md
dsp/audio-trace-format/: Cargo.toml
dsp/bench/: Cargo.toml  moon.yml
dsp/bench/src/: audio_trace.rs  lib.rs  main.rs
dsp/bench/tests/: bench.rs
dsp/cli/: Cargo.toml  moon.yml
dsp/node-gain/: Cargo.toml
dsp/node-null-sink/: Cargo.toml
dsp/node-onset/: Cargo.toml
dsp/node-onset/tests/: no_alloc.rs  onset_sweep.rs
engine/: Cargo.toml  moon.yml
engine-ffi/: Cargo.toml  build.rs
engine-ffi/include/: engine.h
engine-ffi/src/: error.rs  lib.rs
engine-ffi/tests/: smoke.rs
engine/src/: graph.rs  lib.rs  node.rs  registry.rs  subscription.rs  world.rs
engine/tests/: no_alloc.rs  port_enumeration.rs  sub_engine_node.rs
node-assert-near/: Cargo.toml
node-audio-stats-sink/: Cargo.toml
node-breath/: Cargo.toml  moon.yml
node-breath/src/: lib.rs
node-breath/tests/: breath_distractor_sweep.rs  breath_sweep.rs
node-mix-sum/: Cargo.toml
node-onset/: Cargo.toml
node-passthrough/: Cargo.toml
node-pitch-error/: Cargo.toml
node-pitch-error/tests/: pitch_sweep.rs
node-pitch-yin/: Cargo.toml
node-rms-meter/: Cargo.toml
node-sine-source/: Cargo.toml
node-synth-breath/: Cargo.toml
node-synth-pink-noise/: Cargo.toml
node-vibrato/: Cargo.toml
node-vibrato/src/: lib.rs
node-vibrato/tests/: no_alloc.rs  vibrato_snr_sweep.rs  vibrato_sweep.rs
schema/: moon.yml  world.schema.json
scripts/: fetch-assets.sh
worlds/: hello.json  moon.yml
(+91 files in other folders)
