[workspace]
members = [
    "engine",
    "cli",
    "node-synth-sine",
    "node-synth-vibrato-sine",
    "node-synth-pink-noise",
    "node-mix-sum",
    "node-rms-meter",
    "node-assert-near",
    "node-gain",
    "node-passthrough",
    "node-null-sink",
    "node-pitch-error",
    "node-pitch-yin",
    "node-tracer",
    "node-vibrato",
    "node-synth-onsets",
    "node-onset",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["derive"] }
jsonschema = "0.29"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
