[workspace]
members = [
    "dsp/engine",
    "dsp/engine-ffi",
    "dsp/cli",
    "dsp/node-synth-sine",
    "dsp/node-synth-vibrato-sine",
    "dsp/node-synth-pink-noise",
    "dsp/node-mix-sum",
    "dsp/node-rms-meter",
    "dsp/node-assert-near",
    "dsp/node-gain",
    "dsp/node-passthrough",
    "dsp/node-null-sink",
    "dsp/node-pitch-error",
    "dsp/node-pitch-yin",
    "dsp/node-tracer",
    "dsp/node-vibrato",
    "dsp/node-synth-onsets",
    "dsp/node-onset",
    "dsp/node-synth-breath",
    "dsp/node-breath",
    "domain-ports",
    "domain-adapters/clock-std",
    "domain-adapters/telemetry-std",
    "domain-adapters/app-coach",
    "domain-adapters/audio-cpal",
    "apps/coach-cli",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["derive"] }
jsonschema = "0.29"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
cpal = "0.17"
