[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gurukul"
path = "src/main.rs"

[dependencies]
engine = { path = "../engine" }
node-synth-sine = { path = "../node-synth-sine" }
node-synth-vibrato-sine = { path = "../node-synth-vibrato-sine" }
node-synth-pink-noise = { path = "../node-synth-pink-noise" }
node-mix-sum = { path = "../node-mix-sum" }
node-audio-stats-sink = { path = "../node-audio-stats-sink" }
node-passthrough = { path = "../node-passthrough" }
node-null-sink = { path = "../node-null-sink" }
node-tracer = { path = "../node-tracer" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
jsonschema = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
