[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
assert_no_alloc = "1.1.2"
node-synth-sine = { path = "../node-synth-sine" }
node-gain = { path = "../node-gain" }
node-passthrough = { path = "../node-passthrough" }
