[package]
name = "node-vibrato"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine" }

[dev-dependencies]
node-synth-vibrato-sine = { path = "../node-synth-vibrato-sine" }
node-synth-pink-noise = { path = "../node-synth-pink-noise" }
node-pitch-yin = { path = "../node-pitch-yin" }
node-gain = { path = "../node-gain" }
node-mix-sum = { path = "../node-mix-sum" }
assert_no_alloc = "1.1.2"
