[package]
name = "app-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gurukul-cli"
path = "src/main.rs"

[dependencies]
domain-ports = { path = "../../domain-ports" }
domain-adapter-clock = { path = "../../domain-adapters/clock" }

[dev-dependencies]
# Pull in `domain_ports::clock::TestClock` and friends for tests.
domain-ports = { path = "../../domain-ports", features = ["test-util"] }
