[package]
name = "app-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gurukul-cli"
path = "src/main.rs"

[dependencies]
domain-ports = { path = "../../domain-ports" }
domain-adapter-clock = { path = "../../domain-adapters/clock" }
domain-adapter-telemetry = { path = "../../domain-adapters/telemetry" }

[dev-dependencies]
# Pull in TestClock, TestTelemetry, and friends for tests.
domain-ports = { path = "../../domain-ports", features = ["test-util"] }
