[package]
name = "coach-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "coach-cli"
path = "src/main.rs"

[dependencies]
domain-ports = { path = "../../domain-ports" }
adapter-clock-std = { path = "../../domain-adapters/clock-std" }
adapter-telemetry-std = { path = "../../domain-adapters/telemetry-std" }
adapter-telemetry-tui = { path = "../../domain-adapters/telemetry-tui" }
adapter-app-coach = { path = "../../domain-adapters/app-coach" }
adapter-audio-cpal = { path = "../../domain-adapters/audio-cpal" }
clap = { workspace = true }
ctrlc = "3.4"
ratatui = { workspace = true }
crossterm = { workspace = true }
tui-big-text = "0.8"
