[package]
name = "coach-game"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "coach-game"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.18", default-features = false, features = ["2d", "ui"] }
domain-ports = { path = "../../domain-ports", features = ["serde"] }
adapter-clock-std = { path = "../../domain-adapters/clock-std" }
adapter-telemetry-std = { path = "../../domain-adapters/telemetry-std" }
adapter-app-coach = { path = "../../domain-adapters/app-coach" }
adapter-audio-cpal = { path = "../../domain-adapters/audio-cpal" }
adapter-audio-wav = { path = "../../domain-adapters/audio-wav" }
serde = { workspace = true }
serde_json = { workspace = true }
flate2 = { workspace = true }
