[package]
name = "adapter-telemetry"
version = "0.1.0"
edition = "2021"

[dependencies]
domain-ports = { path = "../../domain-ports" }

[dev-dependencies]
# Unit tests use TestClock from the port; smoke test uses the real clock.
domain-ports = { path = "../../domain-ports", features = ["test-util"] }
adapter-clock = { path = "../clock" }
