[package]
name = "dsp-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine" }
node-synth-sine = { path = "../node-synth-sine" }
node-synth-vibrato-sine = { path = "../node-synth-vibrato-sine" }
node-synth-pink-noise = { path = "../node-synth-pink-noise" }
node-mix-sum = { path = "../node-mix-sum" }
node-rms-meter = { path = "../node-rms-meter" }
node-gain = { path = "../node-gain" }
node-passthrough = { path = "../node-passthrough" }
node-null-sink = { path = "../node-null-sink" }
node-pitch-error = { path = "../node-pitch-error" }
node-pitch-yin = { path = "../node-pitch-yin" }
node-tracer = { path = "../node-tracer" }
node-vibrato = { path = "../node-vibrato" }
node-synth-onsets = { path = "../node-synth-onsets" }
node-onset = { path = "../node-onset" }
node-synth-breath = { path = "../node-synth-breath" }
node-breath = { path = "../node-breath" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
jsonschema = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
hound = "3.5"
