[package]
name = "node-onset"
version = "0.1.0"
edition = "2024"

[dependencies]
engine = { path = "../engine" }

[dev-dependencies]
node-synth-onsets = { path = "../node-synth-onsets" }
node-synth-pink-noise = { path = "../node-synth-pink-noise" }
node-gain = { path = "../node-gain" }
node-mix-sum = { path = "../node-mix-sum" }
assert_no_alloc = "1.1.2"
